@@ -1,13 +1,19 @@
 # Willkommen zu meinem Kodi Repository
 
 Dieses Repository stellt Addons zu verschiedenen deutschen öffentlich-rechtlichen Mediatheken zur Verfügung.
-Es kann [hier](https://raw.githubusercontent.com/68000a/Gigathek/master/Gigathek/Gigathek-1.0.0.zip) heruntergeladen werden.
-Im kodi.tv Wiki gibt es eine [Installationsanleitung](https://kodi.wiki/view/HOW-TO:Install_add-ons_from_zip_files).
+
+Die Addons sind lauffähig unter Kodi Krypton, Leia und Matrix.
+
+Für Krypton und Leia kann das Repository [hier](https://raw.githubusercontent.com/68000a/Gigathek/master/Gigathek/Gigathek-1.0.0.zip) heruntergeladen werden.
+Für Matrix muss [diese Datei](https://raw.githubusercontent.com/68000a/Gigathek/master/Gigathek/Gigathek-1.0.1.zip) heruntergeladen werden.
+Wichtig: die heruntergeladene ZIP-Datei auf jeden Fall in ein Verzeichnis kopieren auf welches Kodi Zugriff hat!!!
+In Kodi müssen danach die folgenden Schritte ausgeführt werden:
+Addons -> Addon-Browser -> Aus ZIP-Datei installieren -> heruntergeladene ZIP-Datei "Gigathek-x.x.x.zip" auswählen
+Addons -> Addon-Browser -> Aus Repository installieren -> "Deutsche öffentlich-rechliche TV-Mediatheken" -> Gewünschte Mediathek auswählen
 
 Die Gigathek ist eine Fortführung des Repository [repository.membrane](https://github.com/prof-membrane/repository.membrane)
 welches offenbar nicht mehr weiterentwickelt wird.
 
-Die Addons sind lauffähig unter Kodi Krypton und Leia ~~sowie Matrix~~ [[1](https://www.kodinerds.net/index.php/Thread/69004-Ich-bin-mit-KODI-am-Ende/?postID=578189#post578189)].
 
 # Inhalt des Repos
 
