@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="Gigathek" name="Deutsche öffentlich-rechtliche TV-Mediatheken" version="1.0.0" provider-name="68000a">
+<addon id="Gigathek" name="Deutsche öffentlich-rechtliche TV-Mediatheken" version="1.0.1" provider-name="68000a">
+	<requires>
+		<import addon="xbmc.python" version="3.0.0"/>
+	</requires>
 	<extension point="xbmc.addon.repository" name="Deutsche TV-Mediatheken Add-on Repository">
-		<info compressed="false">https://raw.githubusercontent.com/68000a/Gigathek/master/addons.xml</info>
-		<checksum>https://raw.githubusercontent.com/68000a/Gigathek/master/addons.xml.md5</checksum>
-		<datadir zip="true">https://raw.githubusercontent.com/68000a/Gigathek/master/</datadir>
+		<info compressed="false">https://raw.githubusercontent.com/68000aMatrix/GigathekMatrix/master/addons.xml</info>
+		<checksum>https://raw.githubusercontent.com/68000aMatrix/GigathekMatrix/master/addons.xml.md5</checksum>
+		<datadir zip="true">https://raw.githubusercontent.com/68000aMatrix/GigathekMatrix/master/</datadir>
 	</extension>
 	<extension point="xbmc.addon.metadata">
 		<summary>Deutsche öffentlich-rechtliche TV-Mediatheken</summary>
