@@ -1,2 +1,4 @@
+[B]Version 1.0.1[/B]
+- Matrix Support
 [B]Version 1.0.0[/B]
 - 68000a Github release (forked from https://github.com/prof-membrane/repository.membrane)
